// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker DatePicker baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--datepicker"
>
  <div
    class="t-date-picker t-size-m"
    modelvalue="2021-11-10"
    theme="primary"
  >
    
    <div
      class="t-form-controls t-date-picker__popup-reference"
    >
      <div
        allowinput="0"
        class="t-input__wrap"
        input="function () { [native code] }"
      >
        <div
          class="t-input t-input--suffix"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请选择日期"
            type="text"
          />
          <!---->
          <!---->
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <!---->
      </div>
    </div>
    <!---->
    
  </div>
</div>
`;

exports[`DatePicker DatePicker customIconVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--datepicker"
>
  <div
    class="t-date-picker t-size-m"
    theme="primary"
  >
    
    <div
      class="t-form-controls t-date-picker__popup-reference"
    >
      <div
        allowinput="0"
        class="t-input__wrap"
        input="function () { [native code] }"
      >
        <div
          class="t-input t-input--prefix t-input--suffix"
        >
          <span
            class="t-input__prefix t-input__prefix-icon"
          >
            <svg
              class="t-icon t-icon-browse"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10.88 8a2.88 2.88 0 11-5.76 0 2.88 2.88 0 015.76 0zm-1 0a1.88 1.88 0 10-3.76 0 1.88 1.88 0 003.76 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M1.12 8.23A7.72 7.72 0 008 12.5c2.9 0 5.54-1.63 6.88-4.27L15 8l-.12-.23A7.73 7.73 0 008 3.5a7.74 7.74 0 00-6.88 4.27L1 8l.12.23zM8 11.5A6.73 6.73 0 012.11 8 6.73 6.73 0 0113.9 8 6.74 6.74 0 018 11.5z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <!---->
          <input
            class="t-input__inner"
            placeholder="请选择日期"
            type="text"
          />
          <!---->
          <!---->
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-lock-on"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M6 10v1h4v-1H6z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            
          </span>
        </div>
        <!---->
      </div>
    </div>
    <!---->
    
  </div>
</div>
`;

exports[`DatePicker DatePicker datePresetsAltVue demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-item--datepicker"
  >
    <div
      class="t-date-picker t-size-m"
      modelvalue="2020-12-28T00:00:00.000Z,2020-12-28T00:00:00.000Z"
      theme="primary"
    >
      
      <div
        class="t-form-controls t-date-picker__popup-reference"
      >
        <div
          allowinput="0"
          class="t-input__wrap"
          input="function () { [native code] }"
        >
          <div
            class="t-input t-input--suffix"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请选择日期"
              type="text"
            />
            <!---->
            <!---->
            <span
              class="t-input__suffix t-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-calendar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <!---->
        </div>
      </div>
      <!---->
      
    </div>
  </div>
  <div
    class="tdesign-demo-item--datepicker"
  >
    <div
      class="t-date-picker t-size-m"
      modelvalue="2020-12-28T00:00:00.000Z"
      theme="primary"
    >
      
      <div
        class="t-form-controls t-date-picker__popup-reference"
      >
        <div
          allowinput="0"
          class="t-input__wrap"
          input="function () { [native code] }"
        >
          <div
            class="t-input t-input--suffix"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请选择日期"
              type="text"
            />
            <!---->
            <!---->
            <span
              class="t-input__suffix t-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-calendar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <!---->
        </div>
      </div>
      <!---->
      
    </div>
  </div>
</div>
`;

exports[`DatePicker DatePicker datePresetsTimeVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--datepicker"
>
  <div
    class="t-date-picker t-size-m"
    theme="primary"
  >
    
    <div
      class="t-form-controls t-date-picker__popup-reference"
    >
      <div
        allowinput="0"
        class="t-input__wrap"
        input="function () { [native code] }"
      >
        <div
          class="t-input t-input--suffix"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请选择日期"
            type="text"
          />
          <!---->
          <!---->
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <!---->
      </div>
    </div>
    <!---->
    
  </div>
</div>
`;

exports[`DatePicker DatePicker datePresetsVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--datepicker"
>
  <div
    class="t-date-picker t-size-m"
    theme="primary"
  >
    
    <div
      class="t-form-controls t-date-picker__popup-reference"
    >
      <div
        allowinput="0"
        class="t-input__wrap"
        input="function () { [native code] }"
      >
        <div
          class="t-input t-input--suffix"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请选择日期"
            type="text"
          />
          <!---->
          <!---->
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <!---->
      </div>
    </div>
    <!---->
    
  </div>
</div>
`;

exports[`DatePicker DatePicker dateRangeVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--datepicker"
>
  <div
    class="t-date-picker t-size-m"
  >
    
    <div
      class="t-form-controls t-date-picker__popup-reference"
    >
      <div
        allowinput="0"
        class="t-input__wrap"
        input="function () { [native code] }"
      >
        <div
          class="t-input t-input--suffix"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="开始时间 至 结束时间"
            type="text"
          />
          <!---->
          <!---->
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <!---->
      </div>
    </div>
    <!---->
    
  </div>
  <br />
  <br />
  <div
    class="t-date-picker t-size-m"
    style="width: 350px;"
  >
    
    <div
      class="t-form-controls t-date-picker__popup-reference"
    >
      <div
        allowinput="0"
        class="t-input__wrap"
        input="function () { [native code] }"
      >
        <div
          class="t-input t-input--suffix"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请选择日期"
            type="text"
          />
          <!---->
          <!---->
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-time"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <!---->
      </div>
    </div>
    <!---->
    
  </div>
</div>
`;

exports[`DatePicker DatePicker dateTimeVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--datepicker"
>
  <div
    class="t-date-picker t-size-m"
    theme="primary"
  >
    
    <div
      class="t-form-controls t-date-picker__popup-reference"
    >
      <div
        allowinput="0"
        class="t-input__wrap"
        input="function () { [native code] }"
      >
        <div
          class="t-input t-input--suffix"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请选择日期"
            type="text"
          />
          <!---->
          <!---->
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-time"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <!---->
      </div>
    </div>
    <!---->
    
  </div>
</div>
`;

exports[`DatePicker DatePicker disableDateVue demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-item--datepicker"
  >
    <div
      class="t-date-picker t-size-m"
      theme="primary"
    >
      
      <div
        class="t-form-controls t-date-picker__popup-reference"
      >
        <div
          allowinput="0"
          class="t-input__wrap"
          input="function () { [native code] }"
        >
          <div
            class="t-input t-input--suffix"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请选择日期"
              type="text"
            />
            <!---->
            <!---->
            <span
              class="t-input__suffix t-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-calendar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <!---->
        </div>
      </div>
      <!---->
      
    </div>
  </div>
  <div
    class="tdesign-demo-item--datepicker"
  >
    <div
      class="t-date-picker t-size-m"
      theme="primary"
    >
      
      <div
        class="t-form-controls t-date-picker__popup-reference"
      >
        <div
          allowinput="0"
          class="t-input__wrap"
          input="function () { [native code] }"
        >
          <div
            class="t-input t-input--suffix"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请选择日期"
              type="text"
            />
            <!---->
            <!---->
            <span
              class="t-input__suffix t-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-calendar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <!---->
        </div>
      </div>
      <!---->
      
    </div>
  </div>
  <div
    class="tdesign-demo-item--datepicker"
  >
    <div
      class="t-date-picker t-size-m"
      theme="primary"
    >
      
      <div
        class="t-form-controls t-date-picker__popup-reference"
      >
        <div
          allowinput="0"
          class="t-input__wrap"
          input="function () { [native code] }"
        >
          <div
            class="t-input t-input--suffix"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请选择日期"
              type="text"
            />
            <!---->
            <!---->
            <span
              class="t-input__suffix t-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-calendar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <!---->
        </div>
      </div>
      <!---->
      
    </div>
  </div>
  <div
    class="tdesign-demo-item--datepicker"
  >
    <div
      class="t-date-picker t-size-m"
      theme="primary"
    >
      
      <div
        class="t-form-controls t-date-picker__popup-reference"
      >
        <div
          allowinput="0"
          class="t-input__wrap"
          input="function () { [native code] }"
        >
          <div
            class="t-input t-input--suffix"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请选择日期"
              type="text"
            />
            <!---->
            <!---->
            <span
              class="t-input__suffix t-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-calendar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <!---->
        </div>
      </div>
      <!---->
      
    </div>
  </div>
  <div
    class="tdesign-demo-item--datepicker"
  >
    <div
      class="t-date-picker t-size-m"
      theme="primary"
    >
      
      <div
        class="t-form-controls t-date-picker__popup-reference"
      >
        <div
          allowinput="0"
          class="t-input__wrap"
          input="function () { [native code] }"
        >
          <div
            class="t-input t-input--suffix"
          >
            <!---->
            <!---->
            <input
              class="t-input__inner"
              placeholder="请选择日期"
              type="text"
            />
            <!---->
            <!---->
            <span
              class="t-input__suffix t-input__suffix-icon"
            >
              <svg
                class="t-icon t-icon-calendar"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
          <!---->
        </div>
      </div>
      <!---->
      
    </div>
  </div>
</div>
`;

exports[`DatePicker DatePicker firstDayOfWeekVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--datepicker"
>
  <div
    class="t-date-picker t-size-m"
  >
    
    <div
      class="t-form-controls t-date-picker__popup-reference"
    >
      <div
        allowinput="0"
        class="t-input__wrap"
        input="function () { [native code] }"
      >
        <div
          class="t-input t-input--suffix"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请选择日期"
            type="text"
          />
          <!---->
          <!---->
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <!---->
      </div>
    </div>
    <!---->
    
  </div>
</div>
`;

exports[`DatePicker DatePicker monthVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--datepicker"
>
  <div
    class="t-date-picker t-size-m t-date-picker--month-picker"
    theme="primary"
  >
    
    <div
      class="t-form-controls t-date-picker__popup-reference"
    >
      <div
        allowinput="0"
        class="t-input__wrap"
        input="function () { [native code] }"
      >
        <div
          class="t-input t-input--suffix"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请选择月份"
            type="text"
          />
          <!---->
          <!---->
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <!---->
      </div>
    </div>
    <!---->
    
  </div>
</div>
`;

exports[`DatePicker DatePicker yearVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--datepicker"
>
  <div
    class="t-date-picker t-size-m t-date-picker--month-picker"
    theme="primary"
  >
    
    <div
      class="t-form-controls t-date-picker__popup-reference"
    >
      <div
        allowinput="0"
        class="t-input__wrap"
        input="function () { [native code] }"
      >
        <div
          class="t-input t-input--suffix"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请选择年份"
            type="text"
          />
          <!---->
          <!---->
          <span
            class="t-input__suffix t-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-calendar"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M10 3H6V1.5H5V3H3a1 1 0 00-1 1v9a1 1 0 001 1h10a1 1 0 001-1V4a1 1 0 00-1-1h-2V1.5h-1V3zM5 5h1V4h4v1h1V4h2v2H3V4h2v1zM3 7h10v6H3V7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
        <!---->
      </div>
    </div>
    <!---->
    
  </div>
</div>
`;
